changed the links ./ basic webpage and responsive webpage

--- a/my-webpage.html
+++ b/my-webpage.html
@@ -19,14 +19,14 @@
 </head>
 <body>
     <section>
-        <h1>Samuel Tiisetso Pudinyane</h1> <img src="/images/malva1.jpg">
+        <h1>Samuel Tiisetso Pudinyane</h1> <img src="./images/malva1.jpg">
     </section>
     <br>
-    <a href="/index.html" class="btn btn-primary">Home</a>
+    <a href="./index.html" class="btn btn-primary">Home</a>
     <section>
         <br>
         <h3>ISTANBUL, TURKIYE</h3>
-        <img src="/images/istanbul.jpg">
+        <img src="./images/istanbul.jpg">
             <p>The Bosphorus Bridge (Turkish: Boğaziçi Köprüsü), known officially as the 15 July Martyrs Bridge (Turkish: 15 Temmuz Şehitler Köprüsü) and colloquially as the First Bridge (Turkish: Birinci Köprü), is the southernmost of the three suspension bridges spanning the Bosphorus strait (Turkish: Boğaziçi) in Istanbul, Turkey</p>
     </section>
     <table>
@@ -49,15 +49,15 @@
         <p> HISTORICAL PLACES</p>
         <div>
             <p>Bahcesehir is Located in the heart of Istanbul on the European side of the city, within the borders of Basaksehir Municipality, the site of Bahcesehir and Ispartakule is close to the city's mega project areas, Such as the third Istanbul Bridge project</p>
-            <img src="/images/istanbul-bahcesehir-university.jpg">
+            <img src="./images/istanbul-bahcesehir-university.jpg">
         </div>
         <div>
             <p>Frankfurt Airport is Germany's main international airport by passenger numbers and is located in Frankfurt, the fifth-largest city of Germany and one of the world's leading financial centres. It is operated by Fraport and serves as the main hub for Lufthansa, including Lufthansa CityLine and Lufthansa Cargo as well as Condor and AeroLogic</p>
-            <img src="/images/frunckfurt Airport.jpg">
+            <img src="./images/frunckfurt Airport.jpg">
         </div>
         <div>
             <p>Ficksburg is a town situated at the foot of the 1,750 meter high Imperani Mountain in Free State province, South Africa. The town was founded by General Johan Fick in 1867 who won the territory in the Basotho Wars. He laid out many erven and plots that could be bought at a reasonable price. The town was later proclaimed a municipality in 1891</p>
-            <img src="images/Ficksburg-LARGE.jpg">
+            <img src="./images/Ficksburg-LARGE.jpg">
         </div>
     </section>
 </body>
