--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/simple-grid.css">
+    <link rel="stylesheet" href="./simple-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Home</title>
     <style>
@@ -17,13 +17,13 @@
                 <h1>Samuel Tiisetso Pudinyane</h1>
             </div> 
             <div class="col">
-                <img src="/images/malva1.jpg" class="img">
+                <img src="./images/malva1.jpg" class="img">
             </div>
         </div>
     
         <div class="p-4 center">
-        <a href="/my-webpage.html" class="btn btn-primary">Webpage 1</a>
-        <a href="/my-webpage-grid.html" class="btn btn-primary">Webpage-grid 2</a>
+        <a href="./my-webpage.html" class="btn btn-primary">Webpage 1</a>
+        <a href="./my-webpage-grid.html" class="btn btn-primary">Webpage-grid 2</a>
         </div>
     </div>
 </body>
