--- a/my-webpage-grid.html
+++ b/my-webpage-grid.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-webpage-grid</title>
-    <link rel="stylesheet" href="/simple-grid.css">
+    <link rel="stylesheet" href="./simple-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-6 col-md-5 col-s-12"><h1>Samuel Tiisetso Pudinyane</h1></div> 
-            <div class="col-6 col-md-5 col-s-12 img"><img src="/images/malva1.jpg"></div>
+            <div class="col-6 col-md-5 col-s-12 img"><img src="./images/malva1.jpg"></div>
         </div>
     </div>
     <br>
         <div class="container">
-            <a href="/index.html"  class="btn btn-primary">Home</a>
+            <a href="./index.html"  class="btn btn-primary">Home</a>
         </div>
     <br>
     <div class="container">
         <h3><strong><u>ISTANBUL, TURKIYE</u></strong></h3>
         <div class="row">
-            <div class="col-6 col-md-5 col-s-12"><img src="/images/istanbul.jpg"></div>
+            <div class="col-6 col-md-5 col-s-12"><img src="./images/istanbul.jpg"></div>
             <div class="col-6 col-md-5 col-s-12"><p>The Bosphorus Bridge (Turkish: Boğaziçi Köprüsü), known officially as the 15 July Martyrs Bridge (Turkish: 15 Temmuz Şehitler Köprüsü) and colloquially as the First Bridge (Turkish: Birinci Köprü), is the southernmost of the three suspension bridges spanning the Bosphorus strait (Turkish: Boğaziçi) in Istanbul, Turkey</p></div>
         </div>
         <br>
@@ -53,15 +53,15 @@
             <p> <strong>HISTORICAL PLACES</strong></p>
             <div class="row">
                 <div class="col-6 col-md-5 col-s-12"><p>Bahcesehir is Located in the heart of Istanbul on the European side of the city, within the borders of Basaksehir Municipality, the site of Bahcesehir and Ispartakule is close to the city's mega project areas, Such as the third Istanbul Bridge project</p></div>
-                <div class="col-6 col-md-5 col-s-12"><img src="/images/istanbul-bahcesehir-university.jpg"></div>
+                <div class="col-6 col-md-5 col-s-12"><img src="./images/istanbul-bahcesehir-university.jpg"></div>
             </div>
             <div class="row">
                 <div class="col-6 col-md-5 col-s-12"><p>Frankfurt Airport is Germany's main international airport by passenger numbers and is located in Frankfurt, the fifth-largest city of Germany and one of the world's leading financial centres. It is operated by Fraport and serves as the main hub for Lufthansa, including Lufthansa CityLine and Lufthansa Cargo as well as Condor and AeroLogic</p></div>
-                <div class="col-6 col-md-5 col-s-12"><img src="/images/frunckfurt Airport.jpg"></div>
+                <div class="col-6 col-md-5 col-s-12"><img src="./images/frunckfurt Airport.jpg"></div>
             </div>
             <div class="row">
                 <div class="col-6 col-md-5 col-s-12"><p>Ficksburg is a town situated at the foot of the 1,750 meter high Imperani Mountain in Free State province, South Africa. The town was founded by General Johan Fick in 1867 who won the territory in the Basotho Wars. He laid out many erven and plots that could be bought at a reasonable price. The town was later proclaimed a municipality in 1891</p></div>
-                <div class="col-6 col-md-5 col-s-12"><img src="/images/Ficksburg-LARGE.jpg"></div>
+                <div class="col-6 col-md-5 col-s-12"><img src="./images/Ficksburg-LARGE.jpg"></div>
             </div>
         </div><div>
 </body>
